lang/tests/contract/common/ui/fail/13-async-function.stderr
error: `async` is not supported for methods in contract
  --> $DIR/13-async-function.rs:12:13
   |
12 |         pub async fn noop(&self) {}
   |             ^^^^^
